--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -19,5 +19,5 @@ metadata:
     lighthouse.com/website-url: https://backstage.io
 spec:
   type: library
-  owner: CNCF
+  owner: badal1443
   lifecycle: experimental
